[package]
name = "uttt-matchmaking"
version = "0.0.3"
edition = "2018"
authors = ["rstular <rok@stular.eu>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"
mio = { version = "0.7.14", features = ["os-poll", "net"] }
rand = "0.8"
